Fix data spillage action button spacing

--- a/webapp/channels/src/components/post_view/data_spillage_report/data_spillage_actions/data_spillage_actions.scss
+++ b/webapp/channels/src/components/post_view/data_spillage_report/data_spillage_actions/data_spillage_actions.scss
@@ -6,6 +6,10 @@
     max-width: 100%;
     flex-wrap: wrap;
     gap: 4px;
+
+    .btn + .btn {
+        margin-left: 0;
+    }
 }
 
 .PropertyCardView_fields > .row > .value:has(> .DataSpillageAction) {
